# dragon-tiger-ai

./: .env.example  .gitignore  README.md  daily_run.py  pyproject.toml  run_mcp_server.py  run_multi_agent.py
src/dragon_tiger/: __init__.py  mcp_server.py
src/dragon_tiger/agents/: __init__.py  collector.py  market_analyzer.py  orchestrator.py  report_writer.py  seat_analyzer.py  seat_kb.py
src/dragon_tiger/analysis/: __init__.py  analyzer.py  backtest.py  sentiment.py
src/dragon_tiger/analysis/prompts/: sector_analysis.j2  stock_analysis.j2  yyb_profile.j2
src/dragon_tiger/app/: __init__.py  main.py
src/dragon_tiger/data/: __init__.py  fetcher.py
src/dragon_tiger/monitor/: __init__.py  intraday_monitor.py
src/dragon_tiger/visualization/: __init__.py  charts.py
tests/: conftest.py  test_fetcher.py
