[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-tiger-ai"
version = "0.1.0"
description = "A股龙虎榜AI智能解读工具 - 自动抓取龙虎榜数据，AI解读游资动向，生成可视化报告"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "DragonTigerAI Team" }
]
keywords = ["stock", "a-share", "dragon-tiger", "ai", "finance", "akshare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "akshare>=1.15.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "openai>=1.30.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "wordcloud>=1.9.0",
    "matplotlib>=3.8.0",
    "mcp>=1.0.0,<2",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/dragon_tiger --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true